--- a/app/Rance Connect/AddProduct.xaml
+++ b/app/Rance Connect/AddProduct.xaml
@@ -21,8 +21,10 @@
                 <RowDefinition Height="40*"/>
             </Grid.RowDefinitions>
             <Grid>
-                <Button Content="Recommencer" Width="90" HorizontalAlignment="Left" Background="#FFC71818" Foreground="White" BorderBrush="{x:Null}" Padding="0,0,0,0" Grid.RowSpan="1" BorderThickness="0,0,0,0"/>
+                <Button Content="Ajouter au stock" HorizontalAlignment="Left" Click="AddProduct_Click" Width="120" Background="#FF2583F3" Foreground="White"/>
+
                 <Button Content="X" Click="Remove_Click" Width="30" HorizontalAlignment="Right" Background="{x:Null}" Foreground="#FF7D0000" BorderBrush="#FF373737"/>
+                
             </Grid>
             <Grid Grid.Row="1" Margin="10,10,10,0" Background="#FF43484E">
                 <Grid.RowDefinitions>
@@ -45,11 +47,11 @@
                     <RowDefinition/>
                 </Grid.RowDefinitions>
                 <TextBlock HorizontalAlignment="Left" Margin="10,0,0,0" TextWrapping="Wrap" VerticalAlignment="Center" Foreground="White" Height="16" Width="30"><Run Text="Prix"/><Run Language="fr-fr" Text=" :"/></TextBlock>
-                <TextBox x:Name="Price" TextWrapping="Wrap" VerticalAlignment="Center" Background="#FF6D6D6D" Foreground="White" BorderBrush="#00ABADB3" SelectionTextBrush="Transparent" Height="18" Margin="45,0,15,0"/>
+                <TextBox x:Name="Price" TextWrapping="Wrap" VerticalAlignment="Center" Background="#FF6D6D6D" Foreground="White" BorderBrush="#00ABADB3" SelectionTextBrush="Transparent" Height="18" Margin="45,0,258,0"/>
                 <TextBlock HorizontalAlignment="Left" Margin="10,0,0,0" TextWrapping="Wrap" VerticalAlignment="Center" Foreground="White" Grid.Row="1" Height="16" Width="101"><Run Text="Prix Promotionnel :"/></TextBlock>
-                <TextBox x:Name="SalesPrice" TextWrapping="Wrap" VerticalAlignment="Center" Background="#FF6D6D6D" Foreground="White" BorderBrush="#00ABADB3" SelectionTextBrush="Transparent" Grid.Row="1" Height="18" Margin="116,0,15,0"/>
+                <TextBox x:Name="SalesPrice" TextWrapping="Wrap" VerticalAlignment="Center" Background="#FF6D6D6D" Foreground="White" BorderBrush="#00ABADB3" SelectionTextBrush="Transparent" Grid.Row="1" Height="18" Margin="116,0,191,0"/>
                 <TextBlock HorizontalAlignment="Left" Margin="30,0,0,0" TextWrapping="Wrap" VerticalAlignment="Center" Foreground="White" Grid.Column="1" Height="16" Width="140"><Run Language="fr-fr" Text="Nombre de Lots en Stock :"/></TextBlock>
-                <TextBox x:Name="TotalQuantity" HorizontalAlignment="Left" Margin="175,0,0,0" TextWrapping="Wrap" VerticalAlignment="Center" Width="113" Background="#FF6D6D6D" Foreground="White" BorderBrush="#00ABADB3" SelectionTextBrush="Transparent" Grid.Column="1" Height="18"/>
+                <TextBox x:Name="TotalQuantity" HorizontalAlignment="Left" Margin="175,0,0,0" TextWrapping="Wrap" VerticalAlignment="Center" Width="66" Background="#FF6D6D6D" Foreground="White" BorderBrush="#00ABADB3" SelectionTextBrush="Transparent" Grid.Column="1" Height="18"/>
                 <TextBlock HorizontalAlignment="Left" Margin="30,0,0,0" TextWrapping="Wrap" VerticalAlignment="Center" Foreground="White" Grid.Column="1" Grid.Row="1" Text="Alerte Stock Bas (en nbre de lot) :" Height="16" Width="176"/>
                 <TextBox x:Name="MinimalStock" HorizontalAlignment="Left" Margin="211,0,0,0" TextWrapping="Wrap" VerticalAlignment="Center" Width="77" Background="#FF6D6D6D" Foreground="White" BorderBrush="#00ABADB3" SelectionTextBrush="Transparent" Grid.Column="1" Grid.Row="1" Height="18"/>
                 <TextBlock HorizontalAlignment="Left" Margin="30,0,0,0" TextWrapping="Wrap" VerticalAlignment="Center" Foreground="White" Grid.Column="1" Grid.Row="2" Text="Nombre de Lots à Atteindre (max) :" Height="16" Width="188"/>
@@ -65,9 +67,6 @@
                 <Grid VerticalAlignment="Top" Height="240" Margin="0,60,0,0">
                     <WrapPanel x:Name="CategoriesPanel" Background="#FF6D6D6D" Margin="0,0,0,0"/>
                 </Grid>
-            </Grid>
-            <Grid Grid.Row="4">
-                <Button Content="Ajouter au stock" Click="AddProduct_Click" Width="120" HorizontalAlignment="Right" Background="#FF2583F3" Foreground="White"/>
             </Grid>
         </Grid>
     </Grid>
